--- a/W14/index.html
+++ b/W14/index.html
@@ -64,7 +64,7 @@
     <main class="main">
 
       <!-- RENTAL: SCOOTERS -->
-      <section class="section section__rental section__rental--scooter">
+      <div class="section section__rental section__rental--scooter">
         <div class="wrapper wrapper--scooter">
           <div class="container">
             <article>
@@ -76,10 +76,10 @@
             </picture>
           </div>
         </div>
-      </section>
+      </div>
 
       <!-- RENTAL: ATV -->
-      <section class="section section__rental section__rental--atv">
+      <div class="section section__rental section__rental--atv">
         <div class="wrapper wrapper--atv">
           <div class="container">
             <article>
@@ -91,10 +91,10 @@
             </picture>
           </div>
         </div>
-      </section>
+      </div>
 
       <!-- RENTAL: JEEP -->
-      <section class="section section__rental section__rental--jeep">
+      <div class="section section__rental section__rental--jeep">
         <div class="wrapper wrapper--jeep">
           <div class="container">
             <article>
@@ -106,10 +106,10 @@
             </picture>
           </div>
         </div>
-      </section>
+      </div>
 
       <!-- WEATHER -->
-      <section class="section section__weather section__weather--temperature">
+      <div class="section section__weather section__weather--temperature">
         <div class="wrapper wrapper--weather">
           <div class="container">
             <h3>Current Weather</h3>
@@ -131,17 +131,17 @@
             </table>
           </div>
         </div>
-      </section>
+      </div>
 
       <!-- FORECAST -->
-      <section class="section section__weather section__weather--forecast">
+      <div class="section section__weather section__weather--forecast">
         <div class="wrapper wrapper--forecast">
           <div class="container">
             <h3>3-Day Forecast</h3>
             <div class="forecast__wrapper" id="forecastWrapper"></div>
           </div>
         </div>
-      </section>
+      </div>
 
     </main>
 
@@ -185,10 +185,13 @@
       </div>
 
       <div class="footer__wrapper">
-        <h3>Copyright</h3>
+        <h3>Information</h3>
         <ul class="footer__list">
           <li class="footer__item">
             <a class="footer__link" href="index.html">&copy; <span id="copyright-year"></span> Scoots Motor Company</a>
+          </li>
+          <li class="footer__item">
+            Last Modified <span id="modified-date"></span>
           </li>
         </ul>
       </div>
