--- a/W14/index.html
+++ b/W14/index.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Motor scooter rental company in Cozumel, Mexico.">
     <title>Scoots | Home</title>
-    <!-- <link rel="stylesheet" href="css/small.css"> -->
-    <!-- <link rel="stylesheet" href="css/medium.css"> -->
-    <!-- <link rel="stylesheet" href="css/large.css"> -->
+    <link rel="stylesheet" href="css/small.css">
+    <link rel="stylesheet" href="css/medium.css">
+    <link rel="stylesheet" href="css/large.css">
     <link rel="stylesheet" href="css/styles.css">
     <script>
       document.addEventListener('DOMContentLoaded', () => {
@@ -20,7 +20,7 @@
     </script>
   </head>
 
-  <body onload="">
+  <body>
 
     <!-- HEADER -->
     <header class="header">
@@ -36,16 +36,16 @@
       <div class="nav__wrapper">
         <ul class="nav__list">
           <li class="nav__item">
-            <a class="nav__link nav__link--active" href="#">Rentals</a>
+            <a class="nav__link" href="rentals.html">Rentals</a>
           </li>
           <li class="nav__item">
-            <a class="nav__link" href="#">Tours</a>
+            <a class="nav__link" href="tours.html">Tours</a>
           </li>
           <li class="nav__item">
-            <a class="nav__link" href="#">Reservations</a>
+            <a class="nav__link" href="reservations.html">Reservations</a>
           </li>
           <li class="nav__item">
-            <a class="nav__link" href="#">Contact</a>
+            <a class="nav__link" href="contact.html">Contact</a>
           </li>
         </ul>
       </div>
