--- a/W14/index.html
+++ b/W14/index.html
@@ -36,6 +36,9 @@
       <div class="nav__wrapper">
         <ul class="nav__list">
           <li class="nav__item">
+            <a class="nav__link nav__link--active" href="index.html">Home</a>
+          </li>
+          <li class="nav__item">
             <a class="nav__link" href="rentals.html">Rentals</a>
           </li>
           <li class="nav__item">
