--- a/W14/rentals.html
+++ b/W14/rentals.html
@@ -55,16 +55,163 @@
     </nav>
 
     <!-- HERO -->
-    <section class="hero">
+    <section class="hero hero--subpage">
       <h2 class="hero__title">Rentals</h2>
     </section>
 
-
     <!-- MAIN CONTENT -->
     <main class="main">
+      <section class="rentals">
+        <h3>Honda Motor Scooters</h3>
+        <ul>
+          <li>Honda Metropolitan (49cc) - 1 person</li>
+          <li>Honda Dio (110cc) - 2 person</li>
+          <li>Honda PCX150 (149cc) - 2 person</li>
+        </ul>
+        <table>
+          <thead>
+            <tr>
+              <th colspan="6">Pricing Chart</th>
+            </tr>
+            <tr>
+              <th colspan="2"></th>
+              <th colspan="2">Reservation</th>
+              <th colspan="2">Walk-In</th>
+            </tr>
+            <tr>
+              <th>Rental Type</th>
+              <th>Max. <br>Persons</th>
+              <th>Half Day</th>
+              <th>Full Day</th>
+              <th>Half Day</th>
+              <th>Full Day</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>Metropolitan (49cc)</td>
+              <td>1</td>
+              <td>$20</td>
+              <td>$30</td>
+              <td>$25</td>
+              <td>$35</td>
+            </tr>
+            <tr>
+              <td>Dio Scooter</td>
+              <td>2</td>
+              <td>$30</td>
+              <td>$40</td>
+              <td>$35</td>
+              <td>$45</td>
+            </tr>
+            <tr>
+              <td>PCX150 Scooter</td>
+              <td>2</td>
+              <td>$40</td>
+              <td>$50</td>
+              <td>$45</td>
+              <td>$55</td>
+            </tr>
+          </tbody>
+        </table>
+      </section>
 
-
-
+      <section class="rentals">
+        <h3>ATV Side-by-Side</h3>
+        <ul>
+          <li>Honda Pioneer 1000</li>
+        </ul>
+        <table>
+          <thead>
+            <tr>
+              <th colspan="6">Pricing Chart</th>
+            </tr>
+            <tr>
+              <th colspan="2"></th>
+              <th colspan="2">Reservation</th>
+              <th colspan="2">Walk-In</th>
+            </tr>
+            <tr>
+              <th>Rental Type</th>
+              <th>Max. <br>Persons</th>
+              <th>Half Day</th>
+              <th>Full Day</th>
+              <th>Half Day</th>
+              <th>Full Day</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>Pioneer 1000</td>
+              <td>4</td>
+              <td>$50</td>
+              <td>$70</td>
+              <td>$60</td>
+              <td>$80</td>
+            </tr>
+          </tbody>
+        </table>
+      </section>
+      <section class="rentals">
+        <h3>Jeep Rentals</h3>
+        <ul>
+          <li>4-door Jeep Wrangler - manual with A/C - 5 people max</li>
+          <li>2-door Jeep Wrangler - open air - manual - 4 people max</li>
+        </ul>
+        <table>
+          <thead>
+            <tr>
+              <th colspan="6">Pricing Chart</th>
+            </tr>
+            <tr>
+              <th colspan="2"></th>
+              <th colspan="2">Reservation</th>
+              <th colspan="2">Walk-In</th>
+            </tr>
+            <tr>
+              <th>Rental Type</th>
+              <th>Max. <br>Persons</th>
+              <th>Half Day</th>
+              <th>Full Day</th>
+              <th>Half Day</th>
+              <th>Full Day</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>4-Door Wrangler</td>
+              <td>5</td>
+              <td>$70</td>
+              <td>$100</td>
+              <td>$85</td>
+              <td>$125</td>
+            </tr>
+            <tr>
+              <td>2-Door Wrangler</td>
+              <td>4</td>
+              <td>$60</td>
+              <td>$85</td>
+              <td>$70</td>
+              <td>$90</td>
+            </tr>
+          </tbody>
+        </table>
+      </section>
+      <section class="rentals">
+        <h3>Information and Services</h3>
+        <ul>
+          <li>A $50 security deposit is required to confirm reservations.</li>
+          <li>A valid drivers license is required in hand at time of rental.</li>
+          <li>No one under 12 years of age are allowed to ride on the scooters.</li>
+          <li>Fuel charge not included.</li>
+          <li>Unlimited mileage.</li>
+          <li>Liability insurance is free of charge.</li>
+          <li>Reservations rate requires 24 hour prior notification.</li>
+          <li>Free delivery to Cozumel hotel, Airbnb, or private residence for 2+ day rentals.</li>
+          <li>Payment via Google Pay, cash, credit card, debit card, or PayPal.</li>
+          <li>Rentals may be returned to either location.</li>
+        </ul>
+      </section>
     </main>
 
     <!-- FOOTER -->
