--- a/W14/tours.html
+++ b/W14/tours.html
@@ -55,7 +55,7 @@
     </nav>
 
     <!-- HERO -->
-    <section class="hero">
+    <section class="hero hero--subpage">
       <h2 class="hero__title">Tours</h2>
     </section>
 
